WEBSPARK-811 - Drupal messages CSS fix to make text more legible in the Innovation theme

--- a/profiles/openasu/themes/innovation/css/innovation-main.css
+++ b/profiles/openasu/themes/innovation/css/innovation-main.css
@@ -581,18 +581,17 @@ h4.ui-accordion-header.ui-state-default:last-of-type {
   border-color: #859e11;
 }
 
-.alert-success > ul > li,
-.alert-info > ul > li,
-.alert-danger > ul > li,
-.alert-warning > ul > li a.close:hover {
-  color: white;
-  margin: 1em 0;
+.alert-warning *,
+.alert-warning a.close {
+  color: #000;
 }
 
-.alert-warning > ul > li,
-.alert-warning > ul > li a.close,
-{
-  color: black;
+.alert-success,
+.alert-info,
+.alert-danger,
+.alert-warning a.close:hover {
+  color: #fff;
+  margin: 1em 0;
 }
 
 .alert > ul > li > [class^=krumo] {
